--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,10 +19,22 @@
   }
 }
 
+/* globals.css */
+html,
 body {
-  background: var(--background);
-  color: var(--foreground);
+  margin: 0;
+  padding: 0;
+  background-color: #fefcf9 !important;
+}
+
+body {
+  margin: 0;
+  background-color: transparent !important;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+main {
+  margin: 0;
 }
 
 .blog-content p {
